@@ -1,28 +1,33 @@
 package cn.nukkit.entity;
 
 import cn.nukkit.Player;
-import cn.nukkit.entity.data.EntityDataTypes;
-import cn.nukkit.entity.data.EntityFlag;
-import cn.nukkit.entity.data.PlayerFlag;
-import cn.nukkit.entity.data.Skin;
+import cn.nukkit.entity.data.human.Skin;
+import cn.nukkit.inventory.HumanEnderChestInventory;
+import cn.nukkit.inventory.HumanInventory;
 import cn.nukkit.inventory.HumanOffHandInventory;
 import cn.nukkit.inventory.Inventory;
 import cn.nukkit.inventory.InventoryHolder;
-import cn.nukkit.inventory.HumanInventory;
-import cn.nukkit.inventory.HumanEnderChestInventory;
 import cn.nukkit.item.Item;
 import cn.nukkit.level.Level;
 import cn.nukkit.math.BlockVector3;
 import cn.nukkit.math.NukkitMath;
-import cn.nukkit.nbt.NBTIO;
 import cn.nukkit.nbt.tag.CompoundTag;
 import cn.nukkit.nbt.tag.ListTag;
 import cn.nukkit.nbt.tag.StringTag;
-import cn.nukkit.utils.PersonaPiece;
-import cn.nukkit.utils.PersonaPieceTint;
-import cn.nukkit.utils.SerializedImage;
-import cn.nukkit.utils.SkinAnimation;
+import cn.nukkit.nbt.tag.Tag;
+import cn.nukkit.utils.ItemHelper;
 import cn.nukkit.utils.Utils;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+
+import org.cloudburstmc.protocol.bedrock.data.actor.ActorDataTypes;
+import org.cloudburstmc.protocol.bedrock.data.actor.ActorFlags;
+import org.cloudburstmc.protocol.bedrock.data.skin.AnimatedTextureType;
+import org.cloudburstmc.protocol.bedrock.data.skin.AnimationData;
+import org.cloudburstmc.protocol.bedrock.data.skin.AnimationExpressionType;
+import org.cloudburstmc.protocol.bedrock.data.skin.ImageData;
+import org.cloudburstmc.protocol.bedrock.data.skin.PersonaPieceData;
+import org.cloudburstmc.protocol.bedrock.data.skin.PersonaPieceTintData;
+import org.cloudburstmc.protocol.bedrock.data.skin.SerializedSkin;
 
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -33,73 +38,76 @@ public interface IHuman extends InventoryHolder {
     int NETWORK_ID = 257;
 
     default void initHumanEntity(Entity human) {
-        human.setDataFlag(EntityFlag.HAS_GRAVITY);
-        human.setDataProperty(EntityDataTypes.BED_POSITION, new BlockVector3(0, 0, 0), false);
+        human.setDataFlag(ActorFlags.HAS_GRAVITY);
+        human.setDataProperty(ActorDataTypes.BED_POSITION, new BlockVector3(0, 0, 0).toNetwork(), false);
 
         if (!(human instanceof Player)) {
-            if (human.namedTag.contains("NameTag")) {
-                human.setNameTag(human.namedTag.getString("NameTag"));
+            final CompoundTag nbtMap = human.getNbt();
+            if (human.nbt.contains("NameTag")) {
+                human.setNameTag(nbtMap.getString("NameTag"));
             }
 
-            if (human.namedTag.contains("Skin") && human.namedTag.get("Skin") instanceof CompoundTag) {
-                CompoundTag skinTag = human.namedTag.getCompound("Skin");
+            if (human.nbt.containsCompound("Skin")) {
+                final SerializedSkin.Builder builder = SerializedSkin.builder();
+
+                final CompoundTag skinTag = nbtMap.getCompound("Skin");
                 if (!skinTag.contains("Transparent")) {
                     skinTag.putBoolean("Transparent", false);
                 }
-                Skin newSkin = new Skin();
                 if (skinTag.contains("ModelId")) {
-                    newSkin.setSkinId(skinTag.getString("ModelId"));
+                    builder.skinId(skinTag.getString("ModelId"));
                 }
                 if (skinTag.contains("PlayFabId")) {
-                    newSkin.setPlayFabId(skinTag.getString("PlayFabId"));
+                    builder.playFabId(skinTag.getString("PlayFabId"));
                 }
                 if (skinTag.contains("Data")) {
                     byte[] data = skinTag.getByteArray("Data");
                     if (skinTag.contains("SkinImageWidth") && skinTag.contains("SkinImageHeight")) {
                         int width = skinTag.getInt("SkinImageWidth");
                         int height = skinTag.getInt("SkinImageHeight");
-                        newSkin.setSkinData(new SerializedImage(width, height, data));
+                        builder.skinData(ImageData.of(width, height, data));
                     } else {
-                        newSkin.setSkinData(data);
+                        builder.skinData(ImageData.of(data));
                     }
                 }
                 if (skinTag.contains("CapeId")) {
-                    newSkin.setCapeId(skinTag.getString("CapeId"));
+                    builder.capeId(skinTag.getString("CapeId"));
                 }
                 if (skinTag.contains("CapeData")) {
                     byte[] data = skinTag.getByteArray("CapeData");
                     if (skinTag.contains("CapeImageWidth") && skinTag.contains("CapeImageHeight")) {
                         int width = skinTag.getInt("CapeImageWidth");
                         int height = skinTag.getInt("CapeImageHeight");
-                        newSkin.setCapeData(new SerializedImage(width, height, data));
+                        builder.capeData(ImageData.of(width, height, data));
                     } else {
-                        newSkin.setCapeData(data);
+                        builder.capeData(ImageData.of(data));
                     }
                 }
                 if (skinTag.contains("GeometryName")) {
-                    newSkin.setGeometryName(skinTag.getString("GeometryName"));
+                    builder.geometryName(skinTag.getString("GeometryName"));
                 }
                 if (skinTag.contains("SkinResourcePatch")) {
-                    newSkin.setSkinResourcePatch(new String(skinTag.getByteArray("SkinResourcePatch"), StandardCharsets.UTF_8));
+                    builder.skinResourcePatch(new String(skinTag.getByteArray("SkinResourcePatch"), StandardCharsets.UTF_8));
                 }
                 if (skinTag.contains("GeometryData")) {
-                    newSkin.setGeometryData(new String(skinTag.getByteArray("GeometryData"), StandardCharsets.UTF_8));
+                    builder.geometryData(new String(skinTag.getByteArray("GeometryData"), StandardCharsets.UTF_8));
                 }
                 if (skinTag.contains("SkinAnimationData")) {
-                    newSkin.setAnimationData(new String(skinTag.getByteArray("SkinAnimationData"), StandardCharsets.UTF_8));
+                    builder.animationData(new String(skinTag.getByteArray("SkinAnimationData"), StandardCharsets.UTF_8));
                 } else if (skinTag.contains("AnimationData")) { // backwards compatible
-                    newSkin.setAnimationData(new String(skinTag.getByteArray("AnimationData"), StandardCharsets.UTF_8));
+                    builder.animationData(new String(skinTag.getByteArray("AnimationData"), StandardCharsets.UTF_8));
                 }
                 if (skinTag.contains("PremiumSkin")) {
-                    newSkin.setPremium(skinTag.getBoolean("PremiumSkin"));
+                    builder.premium(skinTag.getBoolean("PremiumSkin"));
                 }
                 if (skinTag.contains("PersonaSkin")) {
-                    newSkin.setPersona(skinTag.getBoolean("PersonaSkin"));
+                    builder.persona(skinTag.getBoolean("PersonaSkin"));
                 }
                 if (skinTag.contains("CapeOnClassicSkin")) {
-                    newSkin.setCapeOnClassic(skinTag.getBoolean("CapeOnClassicSkin"));
+                    builder.capeOnClassic(skinTag.getBoolean("CapeOnClassicSkin"));
                 }
                 if (skinTag.contains("AnimatedImageData")) {
+                    final List<AnimationData> animations = new ObjectArrayList<>();
                     ListTag<CompoundTag> list = skinTag.getList("AnimatedImageData", CompoundTag.class);
                     for (CompoundTag animationTag : list.getAll()) {
                         float frames = animationTag.getFloat("Frames");
@@ -108,48 +116,61 @@ public interface IHuman extends InventoryHolder {
                         int width = animationTag.getInt("ImageWidth");
                         int height = animationTag.getInt("ImageHeight");
                         int expression = animationTag.getInt("AnimationExpression");
-                        newSkin.getAnimations().add(new SkinAnimation(new SerializedImage(width, height, image), type, frames, expression));
+                        animations.add(
+                                new AnimationData(
+                                        ImageData.of(width, height, image),
+                                        AnimatedTextureType.from(type),
+                                        frames,
+                                        AnimationExpressionType.from(expression)
+                                )
+                        );
                     }
+                    builder.animations(animations);
                 }
                 if (skinTag.contains("ArmSize")) {
-                    newSkin.setArmSize(skinTag.getString("ArmSize"));
+                    builder.armSize(skinTag.getString("ArmSize"));
                 }
                 if (skinTag.contains("SkinColor")) {
-                    newSkin.setSkinColor(skinTag.getString("SkinColor"));
+                    builder.skinColor(skinTag.getString("SkinColor"));
                 }
                 if (skinTag.contains("PersonaPieces")) {
                     ListTag<CompoundTag> pieces = skinTag.getList("PersonaPieces", CompoundTag.class);
+                    final List<PersonaPieceData> personaPieces = new ObjectArrayList<>();
                     for (CompoundTag piece : pieces.getAll()) {
-                        newSkin.getPersonaPieces().add(new PersonaPiece(
-                                piece.getString("PieceId"),
-                                piece.getString("PieceType"),
-                                piece.getString("PackId"),
-                                piece.getBoolean("IsDefault"),
-                                piece.getString("ProductId")
-                        ));
+                        personaPieces.add(
+                                new PersonaPieceData(
+                                        piece.getString("PieceId"),
+                                        piece.getString("PieceType"),
+                                        piece.getString("PackId"),
+                                        piece.getBoolean("IsDefault"),
+                                        piece.getString("ProductId")
+                                )
+                        );
                     }
+                    builder.personaPieces(personaPieces);
                 }
                 if (skinTag.contains("PieceTintColors")) {
+                    final List<PersonaPieceTintData> pieceTintColors = new ObjectArrayList<>();
                     ListTag<CompoundTag> tintColors = skinTag.getList("PieceTintColors", CompoundTag.class);
                     for (CompoundTag tintColor : tintColors.getAll()) {
-                        newSkin.getTintColors().add(new PersonaPieceTint(
-                                tintColor.getString("PieceType"),
-                                tintColor.getList("Colors", StringTag.class).getAll().stream()
-                                        .map(stringTag -> stringTag.data).collect(Collectors.toList())
-                        ));
+                        pieceTintColors.add(
+                                new PersonaPieceTintData(
+                                        tintColor.getString("PieceType"),
+                                        tintColor.getList("Colors", StringTag.class).getAll().stream().map(StringTag::parseValue).toList()
+                                )
+                        );
                     }
+                    builder.tintColors(pieceTintColors);
                 }
-                if (skinTag.contains("IsTrustedSkin")) {
-                    newSkin.setTrusted(skinTag.getBoolean("IsTrustedSkin"));
-                }
-                this.setSkin(newSkin);
+                boolean trusted = skinTag.getBoolean("IsTrustedSkin");
+                this.setSkin(new Skin(builder.build(), trusted));
             }
 
             if (this.getSkin() == null) {
-                this.setSkin(new Skin());
+                this.setSkin(new Skin(SerializedSkin.builder().skinData(ImageData.EMPTY).build()));
             }
             this.setUniqueId(Utils.dataToUUID(String.valueOf(human.getId()).getBytes(StandardCharsets.UTF_8),
-                    this.getSkin().getSkinData().data, human.getNameTag().getBytes(StandardCharsets.UTF_8)));
+                    this.getSkin().getSkin().getSkinData().getImage(), human.getNameTag().getBytes(StandardCharsets.UTF_8)));
         }
 
         this.setInventories(new Inventory[]{
@@ -158,129 +179,128 @@ public interface IHuman extends InventoryHolder {
                 new HumanEnderChestInventory(this)
         });
 
-        if (human.namedTag.containsNumber("SelectedInventorySlot")) {
-            this.getInventory().setHeldItemSlot(NukkitMath.clamp(human.namedTag.getInt("SelectedInventorySlot"), 0, 8));
+        final CompoundTag nbtMap = human.getNbt();
+
+        if (human.nbt.contains("SelectedInventorySlot")) {
+            this.getInventory().setHeldItemSlot(NukkitMath.clamp(nbtMap.getInt("SelectedInventorySlot"), 0, 8));
         }
 
-        if (human.namedTag.contains("Inventory") && human.namedTag.get("Inventory") instanceof ListTag) {
+        if (nbtMap.containsList("Inventory")) {
             var inventory = this.getInventory();
-            ListTag<CompoundTag> inventoryList = human.namedTag.getList("Inventory", CompoundTag.class);
+            ListTag<CompoundTag> inventoryList = nbtMap.getList("Inventory", CompoundTag.class);
             for (CompoundTag item : inventoryList.getAll()) {
                 int slot = item.getByte("Slot");
-                inventory.setItem(slot, NBTIO.getItemHelper(item));//inventory 0-39
+                inventory.setItem(slot, ItemHelper.read(item));//inventory 0-39
             }
         }
-        if (human.namedTag.containsCompound("OffInventory")) {
+        if (nbtMap.contains("OffInventory")) {
             HumanOffHandInventory offhandInventory = getOffhandInventory();
-            CompoundTag offHand = human.namedTag.getCompound("OffInventory");
-            offhandInventory.setItem(0, NBTIO.getItemHelper(offHand));//offinventory index 0
+            CompoundTag offHand = nbtMap.getCompound("OffInventory");
+            offhandInventory.setItem(0, ItemHelper.read(offHand));//offinventory index 0
         }
-        if (human.namedTag.contains("EnderItems") && human.namedTag.get("EnderItems") instanceof ListTag) {
-            ListTag<CompoundTag> inventoryList = human.namedTag.getList("EnderItems", CompoundTag.class);
+        if (nbtMap.containsList("EnderItems")) {
+            ListTag<CompoundTag> inventoryList = nbtMap.getList("EnderItems", CompoundTag.class);
             for (CompoundTag item : inventoryList.getAll()) {//enderItems index 0-26
-                ((EntityHumanType) human).getEnderChestInventory().setItem(item.getByte("Slot"), NBTIO.getItemHelper(item));
+                ((EntityHumanType) human).getEnderChestInventory().setItem(item.getByte("Slot"), ItemHelper.read(item));
             }
         }
     }
 
     default void saveHumanEntity(Entity human) {
         //EntityHumanType
-        ListTag<CompoundTag> inventoryTag = null;
+        final ListTag<CompoundTag> inventoryTag = new ListTag<>(Tag.TAG_Compound);
+        human.nbt.putList("Inventory", inventoryTag);
         if (this.getInventory() != null) {
-            inventoryTag = new ListTag<>();
-            human.namedTag.putList("Inventory", inventoryTag);
-
             for (var entry : getInventory().getContents().entrySet()) {
-                inventoryTag.add(NBTIO.putItemHelper(entry.getValue(), entry.getKey()));
+                inventoryTag.add(ItemHelper.write(entry.getValue(), entry.getKey()));
             }
-
-            human.namedTag.putInt("SelectedInventorySlot", this.getInventory().getHeldItemIndex());
+            human.nbt.putInt("SelectedInventorySlot", this.getInventory().getHeldItemIndex());
         }
 
         if (this.getOffhandInventory() != null) {
             Item item = this.getOffhandInventory().getItem(0);
-            human.namedTag.putCompound("OffInventory", NBTIO.putItemHelper(item, 0));
+            human.nbt.putCompound("OffInventory", ItemHelper.write(item, 0));
         }
 
-        human.namedTag.putList("EnderItems", new ListTag<CompoundTag>());
+        human.nbt.putList("EnderItems", new ListTag<>(Tag.TAG_Compound));
         if (this.getEnderChestInventory() != null) {
-            ListTag<CompoundTag> enderItems = human.namedTag.getList("EnderItems", CompoundTag.class);
+            ListTag<CompoundTag> enderItems = human.getNbt().getList("EnderItems", CompoundTag.class);
             for (int slot = 0; slot < this.getEnderChestInventory().getSize(); ++slot) {
                 Item item = this.getEnderChestInventory().getItem(slot);
                 if (!item.isNull()) {
-                    enderItems.add(NBTIO.putItemHelper(item, slot));
+                    enderItems.add(ItemHelper.write(item, slot));
                 }
             }
-            human.namedTag.putList("EnderItems", enderItems);
         }
 
         //EntityHuman
         var skin = getSkin();
-        if (skin != null) {
+        var serializedSkin = skin.getSkin();
+        if (serializedSkin != null) {
             CompoundTag skinTag = new CompoundTag()
-                    .putByteArray("Data", skin.getSkinData().data)
-                    .putInt("SkinImageWidth", skin.getSkinData().width)
-                    .putInt("SkinImageHeight", skin.getSkinData().height)
-                    .putString("ModelId", skin.getSkinId())
-                    .putString("CapeId", skin.getCapeId())
-                    .putByteArray("CapeData", skin.getCapeData().data)
-                    .putInt("CapeImageWidth", skin.getCapeData().width)
-                    .putInt("CapeImageHeight", skin.getCapeData().height)
-                    .putByteArray("SkinResourcePatch", skin.getSkinResourcePatch().getBytes(StandardCharsets.UTF_8))
-                    .putByteArray("GeometryData", skin.getGeometryData().getBytes(StandardCharsets.UTF_8))
-                    .putByteArray("SkinAnimationData", skin.getAnimationData().getBytes(StandardCharsets.UTF_8))
-                    .putBoolean("PremiumSkin", skin.isPremium())
-                    .putBoolean("PersonaSkin", skin.isPersona())
-                    .putBoolean("CapeOnClassicSkin", skin.isCapeOnClassic())
-                    .putString("ArmSize", skin.getArmSize())
-                    .putString("SkinColor", skin.getSkinColor())
+                    .putByteArray("Data", serializedSkin.getSkinData().getImage())
+                    .putInt("SkinImageWidth", serializedSkin.getSkinData().getWidth())
+                    .putInt("SkinImageHeight", serializedSkin.getSkinData().getHeight())
+                    .putString("ModelId", serializedSkin.getSkinId())
+                    .putString("CapeId", serializedSkin.getCapeId())
+                    .putByteArray("CapeData", serializedSkin.getCapeData().getImage())
+                    .putInt("CapeImageWidth", serializedSkin.getCapeData().getWidth())
+                    .putInt("CapeImageHeight", serializedSkin.getCapeData().getHeight())
+                    .putByteArray("SkinResourcePatch", serializedSkin.getSkinResourcePatch().getBytes(StandardCharsets.UTF_8))
+                    .putByteArray("GeometryData", serializedSkin.getGeometryData().getBytes(StandardCharsets.UTF_8))
+                    .putByteArray("SkinAnimationData", serializedSkin.getAnimationData().getBytes(StandardCharsets.UTF_8))
+                    .putBoolean("PremiumSkin", serializedSkin.isPremium())
+                    .putBoolean("PersonaSkin", serializedSkin.isPersona())
+                    .putBoolean("CapeOnClassicSkin", serializedSkin.isCapeOnClassic())
+                    .putString("ArmSize", serializedSkin.getArmSize())
+                    .putString("SkinColor", serializedSkin.getSkinColor())
                     .putBoolean("IsTrustedSkin", skin.isTrusted());
 
-            List<SkinAnimation> animations = skin.getAnimations();
+            List<AnimationData> animations = serializedSkin.getAnimations();
             if (!animations.isEmpty()) {
                 ListTag<CompoundTag> animationsTag = new ListTag<>();
-                for (SkinAnimation animation : animations) {
+                for (AnimationData animation : animations) {
                     animationsTag.add(new CompoundTag()
-                            .putFloat("Frames", animation.frames)
-                            .putInt("Type", animation.type)
-                            .putInt("ImageWidth", animation.image.width)
-                            .putInt("ImageHeight", animation.image.height)
-                            .putInt("AnimationExpression", animation.expression)
-                            .putByteArray("Image", animation.image.data));
+                            .putFloat("Frames", animation.getFrames())
+                            .putInt("Type", animation.getTextureType().ordinal())
+                            .putInt("ImageWidth", animation.getImage().getWidth())
+                            .putInt("ImageHeight", animation.getImage().getHeight())
+                            .putInt("AnimationExpression", animation.getExpressionType().ordinal())
+                            .putByteArray("Image", animation.getImage().getImage()));
                 }
                 skinTag.putList("AnimatedImageData", animationsTag);
             }
 
-            List<PersonaPiece> personaPieces = skin.getPersonaPieces();
+            List<PersonaPieceData> personaPieces = serializedSkin.getPersonaPieces();
             if (!personaPieces.isEmpty()) {
                 ListTag<CompoundTag> piecesTag = new ListTag<>();
-                for (PersonaPiece piece : personaPieces) {
-                    piecesTag.add(new CompoundTag().putString("PieceId", piece.id)
-                            .putString("PieceType", piece.type)
-                            .putString("PackId", piece.packId)
-                            .putBoolean("IsDefault", piece.isDefault)
-                            .putString("ProductId", piece.productId));
+                for (PersonaPieceData piece : personaPieces) {
+                    piecesTag.add(new CompoundTag().putString("PieceId", piece.getId())
+                            .putString("PieceType", piece.getType())
+                            .putString("PackId", piece.getPackId())
+                            .putBoolean("IsDefault", piece.isDefault())
+                            .putString("ProductId", piece.getProductId()));
                 }
                 skinTag.putList("PersonaPieces", piecesTag);
             }
-            List<PersonaPieceTint> tints = skin.getTintColors();
+            List<PersonaPieceTintData> tints = serializedSkin.getTintColors();
             if (!tints.isEmpty()) {
                 ListTag<CompoundTag> tintsTag = new ListTag<>();
-                for (PersonaPieceTint tint : tints) {
+                for (PersonaPieceTintData tint : tints) {
                     ListTag<StringTag> colors = new ListTag<>();
-                    colors.setAll(tint.colors.stream().map(StringTag::new).collect(Collectors.toList()));
+                    colors.setAll(tint.getColors().stream().map(StringTag::new).collect(Collectors.toList()));
                     tintsTag.add(new CompoundTag()
-                            .putString("PieceType", tint.pieceType)
+                            .putString("PieceType", tint.getType())
                             .putList("Colors", colors));
                 }
                 skinTag.putList("PieceTintColors", tintsTag);
             }
 
-            if (!skin.getPlayFabId().isEmpty()) {
-                skinTag.putString("PlayFabId", skin.getPlayFabId());
+            if (!serializedSkin.getPlayFabId().isEmpty()) {
+                skinTag.putString("PlayFabId", serializedSkin.getPlayFabId());
             }
 
-            human.namedTag.putCompound("Skin", skinTag);
+            human.getNbt().putCompound("Skin", skinTag);
         }
     }
 
